fix(script): guard against nullptr m_client in WindowThumbnailItem

BUG: 443765